# token-calculator

./: .gitignore  LEARNINGS.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.mts  vitest.config.ts
electron/: main.ts  preload.ts  tokenLogic.test.ts  tokenLogic.ts
src/: App.test.tsx  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
