[package]
name = "token-calculator"
version = "0.0.4"
description = "High-Performance Local Token Calculator"
authors = ["Suhaas Nandeesh <suhaasnandeesh@gmail.com>"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiktoken-rs = "0.6.0"
walkdir = "2.5"
rfd = "0.17.2"
tokio = { version = "1", features = ["full"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true # Automatically strips symbols from binary to shrink size even further!
